--- a/app/src/main/res/layout/activity_datos_de_sesion.xml
+++ b/app/src/main/res/layout/activity_datos_de_sesion.xml
@@ -2,11 +2,13 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -14,18 +16,6 @@
 
     tools:context="moe.laughingcross.jummymony.DatosDeSesion"
     android:orientation="vertical">
-
-
-        <TextView
-            android:id="@+id/mensajeError"
-            android:layout_below="@+id/botonIniciarSesion"
-            android:gravity="center"
-            android:textColor="#ff0040"
-            android:textSize="30sp"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:text=""
-            android:visibility="gone"/>
 
     <ImageView
         android:layout_width="wrap_content"
@@ -98,21 +88,32 @@
         android:visibility="gone"
         />
     <LinearLayout
+        android:id="@+id/cb_box"
         android:layout_below="@+id/botonIniciarSesion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-    <CheckBox
-        android:id="@+id/cb_rememberMe"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:text="@string/cb_rememberMe"/>
-    <CheckBox
-        android:id="@+id/cb_logMe"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/logMe"
-        android:checked="true"/>
+        <CheckBox
+            android:id="@+id/cb_rememberMe"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:text="@string/cb_rememberMe"/>
+        <CheckBox
+            android:id="@+id/cb_logMe"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="@string/logMe"
+            android:checked="true"/>
     </LinearLayout>
+    <TextView
+        android:id="@+id/mensajeError"
+        android:layout_below="@+id/cb_box"
+        android:gravity="center"
+        android:textColor="#ff0040"
+        android:textSize="30sp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:visibility="gone"/>
 </RelativeLayout>
 </ScrollView>
