Ads, fixed error in transactions and refresh

--- a/app/src/main/res/layout/activity_datos_de_sesion.xml
+++ b/app/src/main/res/layout/activity_datos_de_sesion.xml
@@ -6,6 +6,9 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+
+    android:id="@+id/loginLayout"
+
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
 
@@ -20,7 +23,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="210dp"
-        app:srcCompat="@drawable/h_coffee_cup"
+        app:srcCompat="@drawable/xcup"
         android:id="@+id/LogoImage"
         android:paddingTop="10dp"
         android:contentDescription="@string/logo_description"
@@ -115,5 +118,6 @@
         android:layout_height="wrap_content"
         android:text=""
         android:visibility="gone"/>
+
 </RelativeLayout>
 </ScrollView>
