--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/about_image"
                 android:layout_width="wrap_content"
                 android:layout_height="210dp"
-                android:src="@drawable/h_coffee_cup"
+                android:src="@drawable/xcup"
                 android:layout_centerHorizontal="true"
                 android:layout_margin="15dp"
                 />
