--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    xmlns:Amazon="http://schemas.android.com/tools">
     <LinearLayout
+        android:id="@+id/mainPageContainer"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -32,16 +33,16 @@
             <ImageView
                 android:layout_width="60dp"
                 android:layout_height="60dp"
-                app:srcCompat="@drawable/h_coffee_cup"
-                android:id="@+id/imageView"
+                app:srcCompat="@drawable/guyrl_head"
+                android:id="@+id/head"
                 android:contentDescription="@string/logo_description"/>
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
-                android:layout_toRightOf="@id/imageView"
-                android:layout_toEndOf="@id/imageView"
+                android:layout_toRightOf="@id/head"
+                android:layout_toEndOf="@id/head"
                 android:orientation="vertical">
                 <TextView
                     android:id="@+id/humanName"
@@ -79,7 +80,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="180dp"
                 android:layout_margin="20dp"
-                android:layout_marginBottom="0dp"
+                android:layout_marginBottom="7dp"
                 android:background="@color/colorAccent">
 
                 <TextView
@@ -101,10 +102,19 @@
                     android:layout_margin="15dp"/>
             </RelativeLayout>
 
+        <com.amazon.device.ads.AdLayout
+            android:id="@+id/mainPageAdView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            Amazon:adSize="AutoNoScale"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp" />
+
             <RelativeLayout
                 android:layout_width="fill_parent"
                 android:layout_height="180dp"
                 android:layout_margin="20dp"
+                android:layout_marginTop="7dp"
                 android:layout_marginBottom="0dp"
                 android:background="@color/colorGreenAccent"
                 android:onClick="changeToLatestTransactions">
