--- a/app/src/main/res/menu/menu_toolbar.xml
+++ b/app/src/main/res/menu/menu_toolbar.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_refresh"
-        android:icon="@drawable/h_coffee_cup"
+        android:icon="@drawable/luvdate_white"
         android:title="@string/prompt_rut"
         app:showAsAction="ifRoom"/>
 
