Replace Amazon Ads with Admob.

--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    xmlns:Amazon="http://schemas.android.com/tools">
+    android:layout_height="wrap_content">
     <LinearLayout
         android:id="@+id/mainPageContainer"
         android:orientation="vertical"
@@ -137,13 +137,29 @@
                     android:visibility="gone"/>
             </RelativeLayout>
 
-        <com.amazon.device.ads.AdLayout
-            android:id="@+id/mainPageAdView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            Amazon:adSize="AutoNoScale"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp" />
+            <!-- com.amazon.device.ads.AdLayout
+                android:id="@+id/mainPageAdView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                Amazon:adSize="AutoNoScale"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp" / -->
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+                <com.google.android.gms.ads.AdView
+                    android:id="@+id/LMBMain"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginLeft="20dp"
+                    android:layout_marginRight="20dp"
+                    ads:adSize="BANNER"
+                    ads:adUnitId="ca-app-pub-9206593998355776/4199340643">
+                </com.google.android.gms.ads.AdView>
+            </RelativeLayout>
+
 
             <RelativeLayout
                 android:layout_width="fill_parent"
