--- a/app/src/main/res/layout/activity_datos_de_sesion.xml
+++ b/app/src/main/res/layout/activity_datos_de_sesion.xml
@@ -2,122 +2,134 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:ads="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
 
-    android:id="@+id/loginLayout"
+        android:id="@+id/loginLayout"
 
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-
-    tools:context="moe.laughingcross.jummymony.DatosDeSesion"
-    android:orientation="vertical">
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="210dp"
-        app:srcCompat="@drawable/xcup"
-        android:id="@+id/LogoImage"
-        android:paddingTop="10dp"
-        android:contentDescription="@string/logo_description"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
-
-    <EditText
-        android:id="@+id/rut"
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:hint="@string/prompt_rut"
-        android:maxLines="1"
-        android:maxLength="9"
-        android:digits="1234567890k"
-        android:layout_below="@+id/LogoImage"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:nextFocusDown="@+id/Pin"/>
-    <EditText
-        android:id="@+id/Pin"
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:inputType="numberPassword"
-        android:maxLines="1"
-        android:hint="@string/prompt_password"
-        android:digits="1234567890"
-        android:maxLength="4"
-        android:layout_below="@+id/rut"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:nextFocusDown="@+id/botonIniciarSesion"
-        />
-
-    <Button
-        android:id="@+id/botonIniciarSesion"
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:text="@string/action_sign_in"
-        android:layout_below="@+id/Pin"
-        android:onClick="Autenticar"
-        android:enabled="false"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:orientation="vertical"
-        android:padding="0dp"
-        />
-    <ProgressBar
-        android:id="@+id/loadingObject"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:indeterminate="true"
-        android:layout_below="@+id/rut"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"
-        android:visibility="gone"
-        />
-    <LinearLayout
-        android:id="@+id/cb_box"
-        android:layout_below="@+id/botonIniciarSesion"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <CheckBox
-            android:id="@+id/cb_rememberMe"
+
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+
+        tools:context="moe.laughingcross.jummymony.DatosDeSesion"
+        android:orientation="vertical">
+
+        <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:text="@string/cb_rememberMe"/>
-        <CheckBox
-            android:id="@+id/cb_logMe"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="@string/logMe"
-            android:checked="true"/>
-    </LinearLayout>
-    <TextView
-        android:id="@+id/mensajeError"
-        android:layout_below="@+id/cb_box"
-        android:gravity="center"
-        android:textColor="#ff0040"
-        android:textSize="30sp"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:visibility="gone"/>
+            android:layout_height="210dp"
+            app:srcCompat="@drawable/xcup"
+            android:id="@+id/LogoImage"
+            android:paddingTop="10dp"
+            android:contentDescription="@string/logo_description"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true" />
 
-</RelativeLayout>
+        <EditText
+            android:id="@+id/rut"
+            android:layout_width="fill_parent"
+            android:layout_height="60dp"
+            android:hint="@string/prompt_rut"
+            android:maxLines="1"
+            android:maxLength="9"
+            android:digits="1234567890k"
+            android:layout_below="@+id/LogoImage"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:nextFocusDown="@+id/Pin"/>
+        <EditText
+            android:id="@+id/Pin"
+            android:layout_width="fill_parent"
+            android:layout_height="60dp"
+            android:inputType="numberPassword"
+            android:maxLines="1"
+            android:hint="@string/prompt_password"
+            android:digits="1234567890"
+            android:maxLength="4"
+            android:layout_below="@+id/rut"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:nextFocusDown="@+id/botonIniciarSesion"
+            />
+
+        <Button
+            android:id="@+id/botonIniciarSesion"
+            android:layout_width="fill_parent"
+            android:layout_height="60dp"
+            android:text="@string/action_sign_in"
+            android:layout_below="@+id/Pin"
+            android:onClick="Autenticar"
+            android:enabled="false"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:orientation="vertical"
+            android:padding="0dp"
+            />
+        <ProgressBar
+            android:id="@+id/loadingObject"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:indeterminate="true"
+            android:layout_below="@+id/rut"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:visibility="gone"
+            />
+        <LinearLayout
+            android:id="@+id/cb_box"
+            android:layout_below="@+id/botonIniciarSesion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <CheckBox
+                android:id="@+id/cb_rememberMe"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:text="@string/cb_rememberMe"/>
+            <CheckBox
+                android:id="@+id/cb_logMe"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="@string/logMe"
+                android:checked="true"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/mensajeError"
+            android:layout_below="@+id/cb_box"
+            android:gravity="center"
+            android:textColor="#ff0040"
+            android:textSize="30sp"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:visibility="gone"/>
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/LMBLogin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/mensajeError"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="20dp"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-9206593998355776/8769141042">
+        </com.google.android.gms.ads.AdView>
+
+    </RelativeLayout>
 </ScrollView>
